# Laboratory-work-4

./: CMakeLists.txt  README.md  argmax.cpp  join.cpp  list.cpp  main.cpp  mean.cpp  minMax.cpp  remove_first_negative_element.cpp  replace.cpp  sort.cpp  split.cpp
