cmake_minimum_required(VERSION 3.29)
project(Laboratory_work_4)

set(CMAKE_CXX_STANDARD 20)

add_executable(Laboratory_work_4 main.cpp
        mean.cpp
        minMax.cpp
        argmax.cpp
        sort.cpp
        remove_first_negative_element.cpp
        replace.cpp
        split.cpp
        join.cpp)
